gvb_interp/src/snapshots/gvb_interp__vm__tests__file__close.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
open file [65, 186, 205, 66, 46, 68, 65, 84], read: true, write: false, truncate: false
close file
open file "foo.dat", read: false, write: true, truncate: true
close file

