gvb_interp/src/snapshots/gvb_interp__vm__tests__file__field_mode_error.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
open file "f.DAT", read: false, write: true, truncate: false
get file len: 0
seek file: 0
close file

