gvb_interp/src/snapshots/gvb_interp__vm__tests__file__field_record_too_short.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
open file "f.DAT", read: true, write: true, truncate: false
close file

