gvb_interp/src/snapshots/gvb_interp__vm__tests__file__get_after_eof.snap
---
source: gvb_interp/src/vm.rs
expression: "run_with_file(r#\"\n10 open \"f\" for random as 2 len=4:field 2, 1 as a$,2 as b$(3)\n20 get 2, 5\n    \"#.trim(),\n              vec![(exec_error(1, 3, 11,\n                               \"设置文件指针时发生错误：out of range\"),\n                    None)], File::new(b\"ABCDEFGHIJKL\".to_vec()))"

---
open file "f.DAT", read: true, write: true, truncate: false
seek file: 16
close file

