gvb_interp/src/snapshots/gvb_interp__vm__tests__file__get_file_too_short.snap
---
source: gvb_interp/src/vm.rs
expression: "run_with_file(r#\"\n10 open \"f\" for random as 2 len=4:field 2, 1 as a$,2 as b$(3)\n20 get 2, 3\n    \"#.trim(),\n              vec![(ExecResult :: Error\n                    {\n                        location : Location\n                        { line : 1, range : Range :: new(3, 11), }, message :\n                        format!\n                        (\"文件大小不是记录长度的整数倍\"),\n                    }, None,)], File::new(b\"ABCDEFGHIJK\".to_vec()))"

---
open file "f.DAT", read: true, write: true, truncate: false
seek file: 8
read from file: [73, 74, 75, 0] 
close file

