gvb_interp/src/snapshots/gvb_interp__vm__tests__file__get_mode_error.snap
---
source: gvb_interp/src/vm.rs
expression: "run_with_file(r#\"\n10 open \"f\" for input as 2\n20 get 2, 5\n    \"#.trim(),\n              vec![(exec_error(1, 3, 11,\n                               \"GET 语句只能用于以 RANDOM 模式打开的文件，\\\n              但 2 号文件是以 INPUT 模式打开的\"),\n                    None)], b\"f.DAT\", File::new(b\"ABCDEFGHIJKL\".to_vec()))"

---
open file "f.DAT", read: true, write: false, truncate: false
close file

