gvb_interp/src/snapshots/gvb_interp__vm__tests__file__input_invalid_quoted_string.snap
---
source: gvb_interp/src/vm.rs
expression: "run_with_file(r#\"\n10 open \"f\" input as 3\n20 input #3, a$\n30 input #3, a$\n    \"#.trim(),\n              vec![(exec_error(2, 13, 15,\n                               \"读取到的数据：\\\",ab 12\\\"，没有以逗号或 U+00FF 字符结尾\"),\n                    None)], b\"f.DAT\", File::new(b\"AB,\\\",ab 12\\\"1e3\".to_vec()))"

---
open file "f.DAT", read: true, write: false, truncate: false
read from file: [65] 
read from file: [66] 
read from file: [44] 
read from file: [34] 
read from file: [44] 
read from file: [97] 
read from file: [98] 
read from file: [32] 
read from file: [49] 
read from file: [50] 
read from file: [34] 
read from file: [49] 
close file

